--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -118,7 +118,7 @@
    }
 
    .image{
-    background-image: url(/product-preview-card-component-main/images/image-product-mobile.jpg);
+    background-image: url(/image-product-mobile.jpg);
     width: 100%;
     height: 100%;
    }
