--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@
         width: 100%;
         height: 400px;
         border-radius: 10px 0 0 10px;
+        content: url(/image-product-desktop.jpg);
         
     }
 
@@ -35,6 +36,7 @@
         width: 50%;
         height: 400px;
         border-radius: 15px 0 0 15px;
+        
     }
     
     
@@ -96,71 +98,77 @@
         background-color: rgb(20, 100, 33);
     }
 
+    .attribution { 
+        font-size: 11px; 
+        text-align: center; 
+    }
+    .attribution a {
+         color: hsl(228, 45%, 44%); 
+        }
 
 
 
- 
+@media only screen and (max-width: 375px){
 
 
+    .card{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        border-bottom: none;
+        box-shadow: none;
 
-@media only screen and (max-width: 400px) {
-    
-   body{
-    background-color: hsl(30, 38%, 92%);
-   }
-    
-   .card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    padding: 10px 10px 10px 10px;
-    margin: 50px auto;
-   }
-
-   .image{
-    background-image: url(/image-product-mobile.jpg);
-    width: 100%;
-    height: 100%;
-   }
-
-   img{
-    width: 355px;
-    height: 300px;
-    border-radius: 15px 15px 0 0;
-   }
-
-
-
-   .content{
-    margin-top: -5px;
-    width: 100%;
-    border-radius: 0 0 15px 15px;
-    
-   }
-
-   .attribution { 
-    font-size: 11px; 
-    margin: 200px 150px; 
-    padding-bottom: 50px;
-
-   }
-
-   .attribution a { 
-        color: hsl(228, 45%, 44%); 
     }
 
-    button{
-       margin: 20px 40px;
-       padding: 15px 100px;
+    img{
+        content: url(/image-product-mobile.jpg);
+        width: 100%;
+        border-radius: 15px 15px 0 0;
     }
 
-    .price{
-        margin-left: 6px;
-        margin-top: 20px;
+    .image{
+        width: 400px;
+        
+
     }
 
-    
+    .content{
+        width: 400px;
+        margin-top: -4px;
+        padding-bottom: 30px;
+        border-radius: 0 0 15px 15px;
+        
 
-   
+    }
+
+    .attribution{ 
+        position: relative;
+        left: 185px;
+        
+    }
+
+
+
+     .content button{
+        margin-left: 65px;
+        
+     }
+
+     h1{
+        font-size: 23px;
+        font-weight: 600;
+     }
+
+     p{
+        font-size: 20px;
+        font-weight: 500;
+     }
+
+     .price{
+        font-weight: 950;
+        font-size: 30px;
+        
+        
+     }
 }
